--- a/DynamicAutomation/test-output/old/Default suite/classes.html
+++ b/DynamicAutomation/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>SelfAutomationScenariosPractice.ScrollScenarios</td>
+<td>SelfAutomationScenariosPractice.DownloadFileUsingFireFox</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>scrollUpAndDown</td>
+<td>downloadFile</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
