--- a/DynamicAutomation/test-output/old/Default suite/methods-alphabetical.html
+++ b/DynamicAutomation/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6f8776">  <td>24/02/01 08:27:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ScrollScenarios.scrollUpAndDown()[pri:0, instance:SelfAutomationScenariosPractice.ScrollScenarios@25fb8912]">scrollUpAndDown</td> 
-  <td>main@1967355409</td>   <td></td> </tr>
+<tr bgcolor="bca8a3">  <td>24/02/03 11:22:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DownloadFileUsingFireFox.downloadFile()[pri:0, instance:SelfAutomationScenariosPractice.DownloadFileUsingFireFox@74751b3]">downloadFile</td> 
+  <td>main@1281414889</td>   <td></td> </tr>
 </table>
