--- a/DynamicAutomation/test-output/index.html
+++ b/DynamicAutomation/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Dell\AppData\Local\Temp\testng-eclipse--727951031\testng-customsuite.xml</span>
+                    <span>C:\Users\Dell\AppData\Local\Temp\testng-eclipse--794063425\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,7 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="SelfAutomationScenariosPractice.FileUpLoadHandling" class="method navigator-link" hash-for-method="UploadFile">UploadFile</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="SelfAutomationScenariosPractice.JdbcProgram" class="method navigator-link" hash-for-method="addData">addData</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -122,14 +122,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">SelfAutomationScenariosPractice.FileUpLoadHandling</span>
+              <span class="class-name">SelfAutomationScenariosPractice.JdbcProgram</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="UploadFile">
-                  </a> <!-- UploadFile -->
-                  <span class="method-name">UploadFile</span>
+                  <a name="addData">
+                  </a> <!-- addData -->
+                  <span class="method-name">addData</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -137,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Dell\AppData\Local\Temp\testng-eclipse--727951031\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Dell\AppData\Local\Temp\testng-eclipse--794063425\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -146,11 +146,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;SelfAutomationScenariosPractice.FileUpLoadHandling&quot;&gt;
+      &lt;class name=&quot;SelfAutomationScenariosPractice.JdbcProgram&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;UploadFile&quot;/&gt;
+          &lt;include name=&quot;addData&quot;/&gt;
         &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- SelfAutomationScenariosPractice.FileUpLoadHandling --&gt;
+      &lt;/class&gt; &lt;!-- SelfAutomationScenariosPractice.JdbcProgram --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -192,14 +192,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'UploadFile')
-data.setCell(0, 2, 'SelfAutomationScenariosPractice.FileUpLoadHandling')
-data.setCell(0, 3, 36354);
+data.setCell(0, 1, 'addData')
+data.setCell(0, 2, 'SelfAutomationScenariosPractice.JdbcProgram')
+data.setCell(0, 3, 580);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 36 seconds</span>
+              <span class="suite-total-time">Total running time: 580 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -225,9 +225,9 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">SelfAutomationScenariosPractice.FileUpLoadHandling</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">SelfAutomationScenariosPractice.JdbcProgram</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">UploadFile</span>
+                <span class="method-name">addData</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
