--- a/DynamicAutomation/test-output/old/Default suite/methods.html
+++ b/DynamicAutomation/test-output/old/Default suite/methods.html
@@ -1,6 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bca8a3">  <td>24/02/04 10:32:22</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FileUpLoadHandling.UploadFile()[pri:0, instance:SelfAutomationScenariosPractice.FileUpLoadHandling@74751b3]">UploadFile</td> 
-  <td>main@1281414889</td>   <td></td> </tr>
+<tr bgcolor="bca8a3">  <td>24/02/08 10:04:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="JdbcProgram.addData()[pri:0, instance:SelfAutomationScenariosPractice.JdbcProgram@25fb8912]">addData</td> 
+  <td>main@1949298838</td>   <td></td> </tr>
 </table>
