--- a/DynamicAutomation/test-output/emailable-report.html
+++ b/DynamicAutomation/test-output/emailable-report.html
@@ -8,24 +8,11 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Test2</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">62,310</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t1">Test1</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">114,752</td><td></td><td></td></tr>
-<tr><td><a href="#t2">Test3</a></td><td class="num">5</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">147,404</td><td></td><td></td></tr>
-<tr><th>Total</th><th class="num">9</th><th class="num">0</th><th class="num">0</th><th class="num">0</th><th class="num">324,466</th><th colspan="2"></th></tr>
+<tr><th colspan="8">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">80,222</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test2 &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">JavaSelenium.NewJan</td><td><a href="#m0">createContactgf</a></td><td rowspan="1">1709005044993</td><td rowspan="1">35179</td></tr></tbody>
-<tbody id="t1"><tr><th colspan="4">Test1 &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">JavaSelenium.CreateContactWithDataproviderTest</td><td><a href="#m1">createContactWithDifferentSetsOfData</a></td><td rowspan="3">1709005057179</td><td rowspan="3">28846</td></tr><tr class="passedeven"><td><a href="#m2">createContactWithDifferentSetsOfData</a></td></tr><tr class="passedeven"><td><a href="#m3">createContactWithDifferentSetsOfData</a></td></tr></tbody>
-<tbody id="t2"><tr><th colspan="4">Test3 &#8212; passed</th></tr><tr class="passedeven"><td rowspan="5">JavaSelenium.ReleaseJan</td><td><a href="#m4">firstcreateContactAndValidate</a></td><td rowspan="3">1709005046484</td><td rowspan="3">34845</td></tr><tr class="passedeven"><td><a href="#m5">firstcreateContactAndValidate</a></td></tr><tr class="passedeven"><td><a href="#m6">firstcreateContactAndValidate</a></td></tr><tr class="passedeven"><td><a href="#m7">secondContactAndValidate</a></td><td rowspan="1">1709005136366</td><td rowspan="1">12619</td></tr><tr class="passedeven"><td><a href="#m8">thirdContactAndValidate</a></td><td rowspan="1">1709005154240</td><td rowspan="1">12572</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">SelfAutomationScenariosPractice.AuthenticationPopupHandling</td><td><a href="#m0">popupHandling</a></td><td rowspan="1">1769836310008</td><td rowspan="1">80200</td></tr></tbody>
 </table>
-<h2>Test2</h2><h3 id="m0">JavaSelenium.NewJan#createContactgf</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>Test1</h2><h3 id="m1">JavaSelenium.CreateContactWithDataproviderTest#createContactWithDifferentSetsOfData</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>Ramesh</td><td>Singh</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">JavaSelenium.CreateContactWithDataproviderTest#createContactWithDifferentSetsOfData</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>Mahesh</td><td>Singh</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">JavaSelenium.CreateContactWithDataproviderTest#createContactWithDifferentSetsOfData</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>Suresh</td><td>Singh</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>Test3</h2><h3 id="m4">JavaSelenium.ReleaseJan#firstcreateContactAndValidate</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">JavaSelenium.ReleaseJan#firstcreateContactAndValidate</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m6">JavaSelenium.ReleaseJan#firstcreateContactAndValidate</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m7">JavaSelenium.ReleaseJan#secondContactAndValidate</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m8">JavaSelenium.ReleaseJan#thirdContactAndValidate</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">SelfAutomationScenariosPractice.AuthenticationPopupHandling#popupHandling</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
